[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/messageNode.gd" type="Script" id=1]

[node name="messageNode" type="GraphNode"]
margin_left = -1.52588e-005
margin_top = 2.79333
margin_right = 296.0
margin_bottom = 128.793
title = "messageNode"
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 1
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 280.0
margin_bottom = 38.0
text = "Message"
align = 1

[node name="message" type="TextEdit" parent="."]
margin_left = 16.0
margin_top = 38.0
margin_right = 280.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 70 )
[connection signal="close_request" from="." to="." method="_on_messageNode_close_request"]
[connection signal="resize_request" from="." to="." method="_on_messageNode_resize_request"]
